native/monogame/include/api_structs.h



struct MGG_DepthStencilState_Info
{
    mgbool depthBufferEnable;
    mgbool depthBufferWriteEnable;
    MGCompareFunction depthBufferFunction;
    mgint referenceStencil;
    mgbool stencilEnable;
    mgint stencilMask;
    mgint stencilWriteMask;
    MGCompareFunction stencilFunction;
    MGStencilOperation stencilDepthBufferFail;
    MGStencilOperation stencilFail;
    MGStencilOperation stencilPass;
    mgbool twoSidedStencilMode;
    MGCompareFunction counterClockwiseStencilFunction;
    MGStencilOperation counterClockwiseStencilDepthBufferFail;
    MGStencilOperation counterClockwiseStencilFail;
    MGStencilOperation counterClockwiseStencilPass;
};


struct MGG_RasterizerState_Info
{
    MGFillMode fillMode;
    MGCullMode cullMode;
    mgbool scissorTestEnable;
    mgbool depthClipEnable;
    mgfloat depthBias;
    mgfloat slopeScaleDepthBias;
    mgbool multiSampleAntiAlias;
};


struct MGG_SamplerState_Info
{
    MGTextureAddressMode AddressU;
    MGTextureAddressMode AddressV;
    MGTextureAddressMode AddressW;
    mguint BorderColor;
    MGTextureFilter Filter;
    MGTextureFilterMode FilterMode;
    mgint MaximumAnisotropy;
    mgint MaxMipLevel;
    mgfloat MipMapLevelOfDetailBias;
    MGCompareFunction ComparisonFunction;
};


struct MGG_InputElement
{
    MGVertexElementUsage SemanticUsage;
    mguint SemanticIndex;
    mguint VertexBufferSlot;
    MGVertexElementFormat Format;
    mguint AlignedByteOffset;
    mguint InstanceDataStepRate;
};