MonoGame.Framework/Platform/Native/Graphics.Interop.cs


    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_BlendState_Destroy", ExactSpelling = true)]
    public static extern void BlendState_Destroy(MGG_GraphicsDevice* device, MGG_BlendState* state);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_DepthStencilState_Create", ExactSpelling = true)]
    public static extern MGG_DepthStencilState* DepthStencilState_Create(MGG_GraphicsDevice* device, MGG_DepthStencilState_Info* info);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_DepthStencilState_Destroy", ExactSpelling = true)]
    public static extern void DepthStencilState_Destroy(MGG_GraphicsDevice* device, MGG_DepthStencilState* state);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_RasterizerState_Create", ExactSpelling = true)]
    public static extern MGG_RasterizerState* RasterizerState_Create(MGG_GraphicsDevice* device, MGG_RasterizerState_Info* info);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_RasterizerState_Destroy", ExactSpelling = true)]
    public static extern void RasterizerState_Destroy(MGG_GraphicsDevice* device, MGG_RasterizerState* state);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_SamplerState_Create", ExactSpelling = true)]
    public static extern MGG_SamplerState* SamplerState_Create(MGG_GraphicsDevice* device, MGG_SamplerState_Info* info);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_SamplerState_Destroy", ExactSpelling = true)]
    public static extern void SamplerState_Destroy(MGG_GraphicsDevice* device, MGG_SamplerState* state);

    #endregion

    #region Buffer

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Buffer_Create", ExactSpelling = true)]
    public static extern MGG_Buffer* Buffer_Create(MGG_GraphicsDevice* device, BufferType type, int sizeInBytes);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Buffer_Destroy", ExactSpelling = true)]
    public static extern void Buffer_Destroy(MGG_GraphicsDevice* device, MGG_Buffer* buffer);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Buffer_SetData", ExactSpelling = true)]
    public static extern void Buffer_SetData(
        MGG_GraphicsDevice* device,
        ref MGG_Buffer* buffer,
        int offset,
        byte* data,
        int length,       
        bool discard);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Buffer_GetData", ExactSpelling = true)]
    public static extern void Buffer_GetData(
        MGG_GraphicsDevice* device,
        MGG_Buffer* buffer,
        int offset,
        byte* data,
        int dataCount,
        int dataBytes,
        int dataStride);

    #endregion

    #region Texture

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Texture_Create", ExactSpelling = true)]
    public static extern MGG_Texture* Texture_Create(MGG_GraphicsDevice* device, TextureType type, SurfaceFormat format, int width, int height, int depth, int mipmaps, int slices);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_RenderTarget_Create", ExactSpelling = true)]
    public static extern MGG_Texture* RenderTarget_Create(
        MGG_GraphicsDevice* device,
        TextureType type,
        SurfaceFormat format,
        int width,
        int height,
        int depth,
        int mipmaps,
        int slices,
        DepthFormat depthFormat,
        int multiSampleCount,
        RenderTargetUsage usage);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Texture_Destroy", ExactSpelling = true)]
    public static extern void Texture_Destroy(MGG_GraphicsDevice* device, MGG_Texture* texture);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Texture_SetData", ExactSpelling = true)]
    public static extern void Texture_SetData(
        MGG_GraphicsDevice* device,
        MGG_Texture* texture,
        int level,
        int slice,
        int x,
        int y,
        int z,
        int width,
        int height,
        int depth,
        byte* data,
        int dataBytes);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Texture_GetData", ExactSpelling = true)]
    public static extern void Texture_GetData(
        MGG_GraphicsDevice* device,
        MGG_Texture* texture,
        int level,
        int slice,
        int x,
        int y,
        int z,
        int width,
        int height,
        int depth,
        byte* data,
        int dataBytes);

    #endregion

    #region Input Layout

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_InputLayout_Create", ExactSpelling = true)]
    public static extern MGG_InputLayout* InputLayout_Create(
        MGG_GraphicsDevice* device,
        MGG_Shader* vertexShader,
        int* strides,
        int streamCount,
        MGG_InputElement* elements,
        int elementCount
        );

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_InputLayout_Destroy", ExactSpelling = true)]
    public static extern void InputLayout_Destroy(MGG_GraphicsDevice* device, MGG_InputLayout* layout);

    #endregion

    #region Shader

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Shader_Create", ExactSpelling = true)]
    public static extern MGG_Shader* Shader_Create(MGG_GraphicsDevice* device, ShaderStage stage, byte* bytecode, int sizeInBytes);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_Shader_Destroy", ExactSpelling = true)]
    public static extern void Shader_Destroy(MGG_GraphicsDevice* device, MGG_Shader* shader);

    #endregion

    #region Occlusion Query

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_OcclusionQuery_Create", ExactSpelling = true)]
    public static extern MGG_OcclusionQuery* OcclusionQuery_Create(MGG_GraphicsDevice* device);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_OcclusionQuery_Destroy", ExactSpelling = true)]
    public static extern void OcclusionQuery_Destroy(MGG_GraphicsDevice* device, MGG_OcclusionQuery* query);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_OcclusionQuery_Begin", ExactSpelling = true)]
    public static extern void OcclusionQuery_Begin(MGG_GraphicsDevice* device, MGG_OcclusionQuery* query);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_OcclusionQuery_End", ExactSpelling = true)]
    public static extern void OcclusionQuery_End(MGG_GraphicsDevice* device, MGG_OcclusionQuery* query);

    [DllImport(MGP.MonoGameNativeDLL, EntryPoint = "MGG_OcclusionQuery_GetResult", ExactSpelling = true)]
    public static extern byte OcclusionQuery_GetResult(MGG_GraphicsDevice* device, MGG_OcclusionQuery* query, out int pixelCount);

    #endregion
}
